--- a/_config.yml
+++ b/_config.yml
@@ -98,4 +98,8 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  
+  repository: git@github.com:hdxx/hdxx.github.io.git
+  
+  branch: master
